# agentic-document-chat

./: README.md  pyproject.toml
instructions/: EVALUATION.md  README.md  SAMPLE_REQUESTS.md  TOOL_CONTRACTS.md  tools_README.md
scripts/: run_sample_requests.py
src/: main.py
src/api/: changes.py  chat.py  documents.py  evidence.py  summaries.py  verification.py
src/changes/: diff.py  models.py  store.py
src/core/: config.py  text.py
src/data/: DOCUMENT.md
src/db/: bootstrap.py  models.py  session.py
src/documents/: matching.py  models.py  sections.py  store.py
src/evidence/: store.py
src/rag/: engine.py  index.py  intent.py  prompts.py  rewriter.py  section_lookup.py  summarizer.py  verifier.py
src/tools/: search_client.py
tests/: conftest.py  test_config.py  test_imports.py  test_workflow.py
